# nterm

./: CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  check_textarea.rs  check_vt100.rs
Formula/: nterm.rb
src/: action.rs  ai.rs  app.rs  config.rs  editor.rs  file_tree.rs  lib.rs  main.rs  theme.rs  ui.rs
src/gui/: app.rs  message.rs  mod.rs  styles.rs  syntax.rs  terminal_widget.rs  theme.rs
src/shared/: config.rs  file_tree.rs  mod.rs  theme.rs
src/shared/ai/: client.rs  mod.rs  models.rs
src/shared/terminal/: mod.rs  term.rs
src/tui/: app.rs  editor.rs  mod.rs  theme.rs  ui.rs  workspace_selector.rs
