[package]
name = "nterm"
version = "0.1.2"
edition = "2021"
description = "A terminal-based IDE with file tree, editor, terminal, and AI chat"
license = "MIT"
repository = "https://github.com/ashishtyagi10/nterm"
readme = "README.md"
keywords = ["terminal", "ide", "tui", "editor", "ai"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "nterm"
path = "src/lib.rs"

[[bin]]
name = "nterm-cli"
path = "src/main.rs"

[[bin]]
name = "nterm"
path = "src/bin/nterm-gui.rs"

[dependencies]
arboard = "3.6.1"
dirs = "6.0.0"
portable-pty = "0.9.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syntect = "5.3.0"
syntect-tui = "3.0.6"
tokio = { version = "1.48.0", features = ["full"] }
tui-term = "0.2.0"
tui-textarea = { version = "0.7.0", features = ["search"] }
vt100 = "0.15.2"
unicode-width = "0.2"
walkdir = "2.5.0"
parking_lot = "0.12"
log = "0.4"

# GUI dependencies
iced = { version = "0.13", features = ["tokio", "canvas", "markdown", "highlighter"] }

# Terminal emulation (alacritty's terminal library)
alacritty_terminal = "0.24"
